-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b03
-
s390x
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8207489 | 11.0.2 | Gunter Haug | P3 | Resolved | Fixed | b01 |
| JDK-8207600 | 11.0.1 | Gunter Haug | P3 | Resolved | Fixed | b02 |
| JDK-8207041 | 11 | Gunter Haug | P3 | Resolved | Fixed | b22 |
CPU and system information is missing for s390. jdk/jfr/event/os/TestCPUInformation.java therefor fails.
- backported by
-
JDK-8207041 s390: add missing info to vm_version_ext_s390
-
- Resolved
-
-
JDK-8207489 s390: add missing info to vm_version_ext_s390
-
- Resolved
-
-
JDK-8207600 s390: add missing info to vm_version_ext_s390
-
- Resolved
-