8206919: s390: add missing info to vm_version_ext_s390

Reviewed-by: simonis, mdoerr